--- a/police_data_testing.ipynb
+++ b/police_data_testing.ipynb
@@ -162,6 +162,7 @@
     }
    ],
    "source": [
+    "# jordan testing branch\n",
     "import pandas as pd\n",
     "\n",
     "csvpath = \"Resources/sfpd_incidents_2016.csv\"\n",
@@ -431,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
