initial df graphs

--- a/sf_crime_incident_number.ipynb
+++ b/sf_crime_incident_number.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "[102276 rows x 12 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,6 +289,7 @@
     "# Code for data by individual incident number\n",
     "\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "csvpath = \"Resources/sfpd_incidents_2016.csv\"\n",
     "sfpd_df = pd.read_csv(csvpath)\n",
@@ -301,13 +302,353 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-48037a752df9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msfpd_incnum\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Time'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhour\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'dt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "time = pd.to_datetime(sfpd_incnum['Time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         01/29/2016 12\n",
+       "2         04/25/2016 12\n",
+       "5         01/01/2016 12\n",
+       "6         01/02/2016 12\n",
+       "8         01/02/2016 12\n",
+       "              ...      \n",
+       "150493    10/21/2016 12\n",
+       "150495    12/30/2016 12\n",
+       "150497    12/29/2016 12\n",
+       "150498    12/30/2016 12\n",
+       "150499    12/02/2016 12\n",
+       "Name: Date, Length: 102276, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sfpd_rawdata_clean[\"Month\"] =\n",
+    "sfpd_incnum[\"Date\"].str.rstrip(':').str.split(':').str[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IncidntNum</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Descript</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>PdDistrict</th>\n",
+       "      <th>Resolution</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>106028</th>\n",
+       "      <td>161014087</td>\n",
+       "      <td>FRAUD</td>\n",
+       "      <td>CREDIT CARD, THEFT BY USE OF</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>12/13/2016 12:00:00 AM</td>\n",
+       "      <td>23:59</td>\n",
+       "      <td>CENTRAL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>600 Block of BUSH ST</td>\n",
+       "      <td>-122.407324</td>\n",
+       "      <td>37.790289</td>\n",
+       "      <td>(37.7902885041264, -122.407324486129)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3624</th>\n",
+       "      <td>160178783</td>\n",
+       "      <td>BURGLARY</td>\n",
+       "      <td>BURGLARY OF RESIDENCE, UNLAWFUL ENTRY</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>02/29/2016 12:00:00 AM</td>\n",
+       "      <td>23:59</td>\n",
+       "      <td>TARAVAL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>1400 Block of 10TH AV</td>\n",
+       "      <td>-122.467255</td>\n",
+       "      <td>37.761175</td>\n",
+       "      <td>(37.7611753269242, -122.467255231478)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100198</th>\n",
+       "      <td>160963584</td>\n",
+       "      <td>WEAPON LAWS</td>\n",
+       "      <td>CARRYING A CONCEALED WEAPON</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>11/26/2016 12:00:00 AM</td>\n",
+       "      <td>23:59</td>\n",
+       "      <td>TARAVAL</td>\n",
+       "      <td>ARREST, BOOKED</td>\n",
+       "      <td>JULES AV / HOLLOWAY AV</td>\n",
+       "      <td>-122.461240</td>\n",
+       "      <td>37.721832</td>\n",
+       "      <td>(37.7218319130591, -122.461240360351)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62137</th>\n",
+       "      <td>160631151</td>\n",
+       "      <td>VEHICLE THEFT</td>\n",
+       "      <td>STOLEN AUTOMOBILE</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>08/03/2016 12:00:00 AM</td>\n",
+       "      <td>23:59</td>\n",
+       "      <td>INGLESIDE</td>\n",
+       "      <td>ARREST, BOOKED</td>\n",
+       "      <td>100 Block of ANKENY ST</td>\n",
+       "      <td>-122.405204</td>\n",
+       "      <td>37.719455</td>\n",
+       "      <td>(37.7194547844062, -122.405204446811)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26375</th>\n",
+       "      <td>160122304</td>\n",
+       "      <td>VANDALISM</td>\n",
+       "      <td>MALICIOUS MISCHIEF, VANDALISM OF VEHICLES</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>01/15/2016 12:00:00 AM</td>\n",
+       "      <td>23:59</td>\n",
+       "      <td>SOUTHERN</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>AHERN WY / HARRIET ST</td>\n",
+       "      <td>-122.403960</td>\n",
+       "      <td>37.776312</td>\n",
+       "      <td>(37.7763118173513, -122.40396042135)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89573</th>\n",
+       "      <td>160872781</td>\n",
+       "      <td>OTHER OFFENSES</td>\n",
+       "      <td>FALSE PERSONATION TO RECEIVE MONEY OR PROPERTY</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>10/04/2016 12:00:00 AM</td>\n",
+       "      <td>00:01</td>\n",
+       "      <td>INGLESIDE</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>0 Block of NORDHOFF ST</td>\n",
+       "      <td>-122.440830</td>\n",
+       "      <td>37.733792</td>\n",
+       "      <td>(37.733792005037, -122.440829985617)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89576</th>\n",
+       "      <td>160872816</td>\n",
+       "      <td>OTHER OFFENSES</td>\n",
+       "      <td>VIOLATION OF RESTRAINING ORDER</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>10/11/2016 12:00:00 AM</td>\n",
+       "      <td>00:01</td>\n",
+       "      <td>SOUTHERN</td>\n",
+       "      <td>EXCEPTIONAL CLEARANCE</td>\n",
+       "      <td>800 Block of BRYANT ST</td>\n",
+       "      <td>-122.403405</td>\n",
+       "      <td>37.775421</td>\n",
+       "      <td>(37.775420706711, -122.403404791479)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89585</th>\n",
+       "      <td>160872888</td>\n",
+       "      <td>ASSAULT</td>\n",
+       "      <td>ELDER ADULT OR DEPENDENT ABUSE (NOT EMBEZZLEME...</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>10/25/2016 12:00:00 AM</td>\n",
+       "      <td>00:01</td>\n",
+       "      <td>INGLESIDE</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>100 Block of DALEWOOD WY</td>\n",
+       "      <td>-122.456617</td>\n",
+       "      <td>37.737895</td>\n",
+       "      <td>(37.7378950760453, -122.456617190599)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56043</th>\n",
+       "      <td>160575822</td>\n",
+       "      <td>VEHICLE THEFT</td>\n",
+       "      <td>STOLEN TRUCK</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>07/17/2016 12:00:00 AM</td>\n",
+       "      <td>00:01</td>\n",
+       "      <td>BAYVIEW</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>1700 Block of REVERE AV</td>\n",
+       "      <td>-122.392776</td>\n",
+       "      <td>37.733078</td>\n",
+       "      <td>(37.7330781710011, -122.392775772337)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116595</th>\n",
+       "      <td>166066362</td>\n",
+       "      <td>LARCENY/THEFT</td>\n",
+       "      <td>GRAND THEFT FROM LOCKED AUTO</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>03/19/2016 12:00:00 AM</td>\n",
+       "      <td>00:01</td>\n",
+       "      <td>SOUTHERN</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>BRANNAN ST / 5TH ST</td>\n",
+       "      <td>-122.398759</td>\n",
+       "      <td>37.776569</td>\n",
+       "      <td>(37.776568769743, -122.398758596964)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>102276 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        IncidntNum        Category  \\\n",
+       "106028   161014087           FRAUD   \n",
+       "3624     160178783        BURGLARY   \n",
+       "100198   160963584     WEAPON LAWS   \n",
+       "62137    160631151   VEHICLE THEFT   \n",
+       "26375    160122304       VANDALISM   \n",
+       "...            ...             ...   \n",
+       "89573    160872781  OTHER OFFENSES   \n",
+       "89576    160872816  OTHER OFFENSES   \n",
+       "89585    160872888         ASSAULT   \n",
+       "56043    160575822   VEHICLE THEFT   \n",
+       "116595   166066362   LARCENY/THEFT   \n",
+       "\n",
+       "                                                 Descript  DayOfWeek  \\\n",
+       "106028                       CREDIT CARD, THEFT BY USE OF    Tuesday   \n",
+       "3624                BURGLARY OF RESIDENCE, UNLAWFUL ENTRY     Monday   \n",
+       "100198                        CARRYING A CONCEALED WEAPON   Saturday   \n",
+       "62137                                   STOLEN AUTOMOBILE  Wednesday   \n",
+       "26375           MALICIOUS MISCHIEF, VANDALISM OF VEHICLES     Friday   \n",
+       "...                                                   ...        ...   \n",
+       "89573      FALSE PERSONATION TO RECEIVE MONEY OR PROPERTY    Tuesday   \n",
+       "89576                      VIOLATION OF RESTRAINING ORDER    Tuesday   \n",
+       "89585   ELDER ADULT OR DEPENDENT ABUSE (NOT EMBEZZLEME...    Tuesday   \n",
+       "56043                                        STOLEN TRUCK     Sunday   \n",
+       "116595                       GRAND THEFT FROM LOCKED AUTO   Saturday   \n",
+       "\n",
+       "                          Date   Time PdDistrict             Resolution  \\\n",
+       "106028  12/13/2016 12:00:00 AM  23:59    CENTRAL                   NONE   \n",
+       "3624    02/29/2016 12:00:00 AM  23:59    TARAVAL                   NONE   \n",
+       "100198  11/26/2016 12:00:00 AM  23:59    TARAVAL         ARREST, BOOKED   \n",
+       "62137   08/03/2016 12:00:00 AM  23:59  INGLESIDE         ARREST, BOOKED   \n",
+       "26375   01/15/2016 12:00:00 AM  23:59   SOUTHERN                   NONE   \n",
+       "...                        ...    ...        ...                    ...   \n",
+       "89573   10/04/2016 12:00:00 AM  00:01  INGLESIDE                   NONE   \n",
+       "89576   10/11/2016 12:00:00 AM  00:01   SOUTHERN  EXCEPTIONAL CLEARANCE   \n",
+       "89585   10/25/2016 12:00:00 AM  00:01  INGLESIDE                   NONE   \n",
+       "56043   07/17/2016 12:00:00 AM  00:01    BAYVIEW                   NONE   \n",
+       "116595  03/19/2016 12:00:00 AM  00:01   SOUTHERN                   NONE   \n",
+       "\n",
+       "                         Address           X          Y  \\\n",
+       "106028      600 Block of BUSH ST -122.407324  37.790289   \n",
+       "3624       1400 Block of 10TH AV -122.467255  37.761175   \n",
+       "100198    JULES AV / HOLLOWAY AV -122.461240  37.721832   \n",
+       "62137     100 Block of ANKENY ST -122.405204  37.719455   \n",
+       "26375      AHERN WY / HARRIET ST -122.403960  37.776312   \n",
+       "...                          ...         ...        ...   \n",
+       "89573     0 Block of NORDHOFF ST -122.440830  37.733792   \n",
+       "89576     800 Block of BRYANT ST -122.403405  37.775421   \n",
+       "89585   100 Block of DALEWOOD WY -122.456617  37.737895   \n",
+       "56043    1700 Block of REVERE AV -122.392776  37.733078   \n",
+       "116595       BRANNAN ST / 5TH ST -122.398759  37.776569   \n",
+       "\n",
+       "                                     Location  \n",
+       "106028  (37.7902885041264, -122.407324486129)  \n",
+       "3624    (37.7611753269242, -122.467255231478)  \n",
+       "100198  (37.7218319130591, -122.461240360351)  \n",
+       "62137   (37.7194547844062, -122.405204446811)  \n",
+       "26375    (37.7763118173513, -122.40396042135)  \n",
+       "...                                       ...  \n",
+       "89573    (37.733792005037, -122.440829985617)  \n",
+       "89576    (37.775420706711, -122.403404791479)  \n",
+       "89585   (37.7378950760453, -122.456617190599)  \n",
+       "56043   (37.7330781710011, -122.392775772337)  \n",
+       "116595   (37.776568769743, -122.398758596964)  \n",
+       "\n",
+       "[102276 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfpd_incnum.sort_values('Time', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use for heatmaps? --> records individual criminal occurances\n",
-    "#map for all crime\n",
-    "#map for just violent crime"
+    "morningcrime = "
    ]
   }
  ],
