--- a/sf_crime_incident_number.ipynb
+++ b/sf_crime_incident_number.ipynb
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# Heat map (records individaul reports instead of categories)"
    ]
   },
   {
@@ -313,21 +313,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# defining violent crimes then see which areas are less safe"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# one map for violent crime and one for non-violent"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Most frequently occuring crime and break down by district "
+   ]
   },
   {
    "cell_type": "code",
