--- a/SF Crime 2016_Incident Numbers(pt. 2).ipynb
+++ b/SF Crime 2016_Incident Numbers(pt. 2).ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will go on with our analysis with a new dataframe made up of just individual incident reports regardless of criminal category."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -588,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
